# borg

./: Cargo.toml  DESIGN.md  README.md
assets/: index.html
src/: borg.rs  clock.rs  codes.rs  config.rs  main.rs  protocol.rs  registry.rs  static_files.rs  timing.rs
src/adaptor/: llm.rs  manual.rs  mod.rs
src/routes/: lifecycle.rs  mod.rs  send.rs  stream.rs  sync.rs
