[package]
name = "borg"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
axum = "0.8.9"
bytes = "1.11.1"
rand = "0.10.1"
reqwest = { version = "0.13.3", features = ["json", "stream"] }
rust-embed = { version = "8.11.0", features = ["debug-embed"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "net"] }
tokio-stream = "0.1.18"
tower-http = { version = "0.6.11", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
